[package]
name = "reth-p256"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[dependencies]
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8", features = ["full", "cli"] }

revm = { version = "24.0.1", features = ["secp256r1"] }

clap = "4"
eyre = "0.6"
tracing = "0.1"