[package]
name = "reth-p256"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[dependencies]
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "9652c0f", features = ["full", "cli"] }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "9652c0f" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "9652c0f" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "9652c0f" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", rev = "9652c0f" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "9652c0f" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "9652c0f" }

alloy-eips = "1"
alloy-genesis = "1"

clap = "4"
eyre = "0.6"
tracing = "0.1"
